--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-live-clock": "^6.1.25",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-scrollable-list": "^1.3.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
